# hpc-knapsack

./: .gitignore  CMakeDoxygen.txt  CMakeLists.txt  LICENSE.md  README.md  doxygen.in  getWalltime.cpp  getWalltime.h
io/: KnapSackReader.cpp  KnapSackReader.h  KnapSackWriter.h
main/: KnapSack.cpp  KnapSack.h  KnapSackSolver.cpp  KnapSackSolver.h  Main.cpp
main/algorithms/: BruteForceSolver.cpp  BruteForceSolver.h  DynamicProgrammingLessSpaceSolver.cpp  DynamicProgrammingLessSpaceSolver.h  DynamicProgrammingLowMemoryParallelSolver.cpp  DynamicProgrammingLowMemoryParallelSolver.h  DynamicProgrammingLowMemorySolver.cpp  DynamicProgrammingLowMemorySolver.h  DynamicProgrammingParallelSolver.cpp  DynamicProgrammingParallelSolver.h  DynamicProgrammingSolver.cpp  DynamicProgrammingSolver.h  FeasibleBruteForceSolver.cpp  FeasibleBruteForceSolver.h  NemhauserUllmannParallelSolver.cpp  NemhauserUllmannParallelSolver.h  NemhauserUllmannRLPParallelSolver.cpp  NemhauserUllmannRLPParallelSolver.h  NemhauserUllmannSolver.cpp  NemhauserUllmannSolver.h  NemhauserUllmannSolverRLP.cpp  NemhauserUllmannSolverRLP.h
res/: KnapSackItems.txt  KnapSackItemsForUnittest.txt  dpExample.txt  dynamicProgrammingExample.txt  fifthFileExample.txt  firstFileExample.txt  fourthFileExample.txt  run_and_collect_statistics.sh  secondFileExample.txt  seventhFileExample.txt  sixthFileExample.txt  thirdFileExample.txt
test/: BruteForceSolverTest.cpp  DynamicProgrammingLowMemoryParallelSolverTest.cpp  DynamicProgrammingLowMemorySolverTest.cpp  DynamicProgrammingParallelSolverTest.cpp  DynamicProgrammingSolverTest.cpp  KnapSackSolverTest.cpp  NemhauserUllmannParallelSolverTest.cpp  NemhauserUllmannRLPParallelSolverTest.cpp  NemhauserUllmannSolverRLPTest.cpp  NemhauserUllmannSolverTest.cpp  ReaderTest.cpp  TestData.h  WriterTest.cpp  readerTest.cpp  writerTest.cpp
util/: GetWalltime.cpp  MyMath.cpp  MyMath.h  StringUtils.cpp  StringUtils.h  TestUtils.h
util/io/: KnapSackReader.cpp  KnapSackReader.h  KnapSackWriter.cpp  KnapSackWriter.h  StatisticsWriter.cpp  StatisticsWriter.h
